# Applied-AI-Projects

./: BreastCancerDetection  README.md
.claude/: settings.local.json
BreastCancerDetection/backend/: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
BreastCancerDetection/backend/app/: config.py  main.py  schemas.py
BreastCancerDetection/backend/app/agent/: loop.py  prompt.py
BreastCancerDetection/backend/app/mcp_server/: server.py  tools.py
BreastCancerDetection/backend/app/model/: architecture.py  gradcam.py  inference.py  input_gate.py
BreastCancerDetection/backend/app/routes/: chat.py  gradcam.py  predict.py
BreastCancerDetection/backend/tests/: conftest.py  test_agent.py  test_eval_gate.py  test_gradcam.py  test_input_gate.py  test_mcp_tools.py  test_predict.py
TokenOptimizer/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
TokenOptimizer/.claude/agents/: developer.md  reviewer.md  verifier.md
TokenOptimizer/.claude/rules/: mcp-server.md  python-conventions.md  typescript-conventions.md
TokenOptimizer/backend/: Dockerfile  README.md  pyproject.toml
TokenOptimizer/backend/app/: __init__.py  optimizer.py
TokenOptimizer/backend/app/budget/: __init__.py  response_budget.py
TokenOptimizer/backend/app/cache/: __init__.py  cache_optimizer.py
TokenOptimizer/backend/app/compress/: __init__.py  llmlingua.py  rule_compressor.py  service.py
TokenOptimizer/backend/app/core/: __init__.py  ledger.py  tokens.py
TokenOptimizer/backend/app/normalize/: __init__.py  code.py  dedup.py  delta.py  extract.py  structured.py  textclean.py
TokenOptimizer/backend/app/pillars/: __init__.py  cli.py  lib.py  mcp_server.py  webapp.py
TokenOptimizer/backend/cutok/: __init__.py  optimizer.py
TokenOptimizer/backend/cutok/budget/: response_budget.py
TokenOptimizer/backend/cutok/cache/: cache_optimizer.py
TokenOptimizer/backend/cutok/compress/: __init__.py  service.py
TokenOptimizer/backend/cutok/core/: ledger.py  tokens.py  types.py
TokenOptimizer/backend/cutok/normalize/: code.py  dedup.py  delta.py  structured.py  textclean.py
TokenOptimizer/backend/cutok/pillars/: cli.py  lib.py  mcp_server.py  webapp.py
TokenOptimizer/backend/tests/: test_benchmark.py  test_cache_optimizer.py  test_cli.py  test_code.py  test_dedup.py  test_delta.py  test_extract.py  test_ledger.py  test_lib.py  test_llmlingua.py  test_mcp.py  test_optimizer_normalization.py  test_properties.py  test_proxy_multiprovider.py  test_proxy_optimized.py  test_proxy_passthrough.py  test_proxy_streaming.py  test_response_budget.py  test_rule_compressor.py  test_smoke.py  test_structured_csv.py  test_structured_json.py  test_textclean.py  test_tokens.py  test_types.py  test_webapp.py
TokenOptimizer/backend/tests/budget/: test_response_budget.py
TokenOptimizer/backend/tests/cache/: test_cache_optimizer.py
TokenOptimizer/backend/tests/compress/: test_llmlingua.py
TokenOptimizer/backend/tests/core/: test_ledger.py  test_tokens.py  test_types.py
TokenOptimizer/backend/tests/normalize/: test_code.py  test_dedup.py  test_delta.py  test_extract.py  test_optimizer_normalization.py  test_structured_csv.py  test_structured_json.py  test_textclean.py
TokenOptimizer/backend/tests/pillars/: test_cli.py  test_lib.py  test_mcp.py  test_proxy_multiprovider.py  test_proxy_optimized.py  test_proxy_passthrough.py  test_proxy_streaming.py  test_webapp.py
TokenOptimizer/backend/tokenoptim/: __init__.py  optimizer.py
TokenOptimizer/backend/tokenoptim/budget/: response_budget.py
TokenOptimizer/backend/tokenoptim/cache/: cache_optimizer.py
TokenOptimizer/backend/tokenoptim/compress/: __init__.py  service.py
TokenOptimizer/backend/tokenoptim/core/: ledger.py  tokens.py
TokenOptimizer/backend/tokenoptim/normalize/: code.py  dedup.py  delta.py  structured.py  textclean.py
TokenOptimizer/backend/tokenoptim/pillars/: cli.py  lib.py  mcp_server.py  webapp.py
TokenOptimizer/extension/: PRIVACY.md  PUBLISHING.md  STORE_LISTING.md  esbuild.mjs  make_icons.py  manifest.json  options.html  package-lock.json  package.json  package.mjs  tsconfig.json  vitest.config.ts
TokenOptimizer/extension/scripts/: make_icons.py
TokenOptimizer/extension/src/: attachments.ts  background.ts  classifier.ts  content.ts  diff.ts  options.ts  panel.ts  ruleCompressor.ts  service.ts  settings.ts  sites.ts  storage.ts  tokens.ts  worker.ts
TokenOptimizer/frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  vercel.json
TokenOptimizer/frontend/app/: globals.css  layout.tsx  page.tsx
TokenOptimizer/frontend/components/: FileOptimizer.tsx  PromptOptimizer.tsx
TokenOptimizer/frontend/lib/: api.ts  attachments.ts  diff.ts  tokens.ts
TokenOptimizer/scripts/: benchmark.py  quantize_model.py
TokenOptimizer/scripts/fixtures/: config.json  data.json  email.txt  module.py  notes.md  pipeline.py  prompts.txt  report.md  sales.csv  table.csv
TokenOptimizer/shared/: compression_rules.json  token_test_vectors.json
TokenOptimizer/src/token_optimizer/: __init__.py  cache_optimizer.py  cli.py  ledger.py  lib.py  mcp_server.py  optimizer.py  response_budget.py  tokens.py  webapp.py
TokenOptimizer/src/token_saver/: __init__.py  cache_optimizer.py  cli.py  ledger.py  lib.py  mcp_server.py  optimizer.py  response_budget.py  tokens.py  types.py  webapp.py
TokenOptimizer/tests/: test_benchmark.py  test_cache_optimizer.py  test_classifier.py  test_cli.py  test_code.py  test_dedup.py  test_delta.py  test_extract.py  test_ledger.py  test_lib.py  test_llmlingua.py  test_mcp.py  test_optimizer_normalization.py  test_properties.py  test_proxy_multiprovider.py  test_proxy_optimized.py  test_proxy_passthrough.py  test_proxy_streaming.py  test_response_budget.py  test_rule_compressor.py  test_smoke.py  test_structured_csv.py  test_structured_json.py  test_textclean.py  test_tokens.py  test_types.py  test_webapp.py
(+144 files in other folders)
