[project]
name = "breast-cancer-cdss-backend"
version = "0.1.0"
description = "FastAPI backend for the breast cancer histopathology CDSS: ResNet50 inference, Grad-CAM, an MCP server, and a Gemini agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.4",
    "numpy>=1.26",
    "grad-cam>=1.5",
    "mcp>=1.2",
    "google-genai>=1.0",
    "google-cloud-storage>=2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

# Pin CPU-only torch wheels: keeps the Cloud Run image lean and CI GPU-free.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's File/Depends/Query/Form are designed to be called in argument defaults.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.File", "fastapi.Depends", "fastapi.Query", "fastapi.Form"]

[tool.pytest.ini_options]
testpaths = ["tests"]
