[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-optimizer"
version = "0.1.0"
description = "Local LLM token-reduction engine: attachment normalization, cache optimization, prompt compression, response budgeting — via a transparent proxy, an MCP server, and a browser extension."
requires-python = ">=3.11"
authors = [{ name = "Achyuth Kumar Baddela" }]
dependencies = [
    "markitdown",
    "tiktoken",
    "httpx",
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[project.optional-dependencies]
compress = ["onnxruntime", "transformers", "huggingface_hub", "onnx", "sympy"]
# Runtime deps for the hosted compression service (Cloud Run): inference + model-from-GCS.
serve = ["onnxruntime", "transformers", "google-cloud-storage"]
mcp = ["mcp"]
# Exact local tokenizers for more providers (graceful BPE-proxy fallback when absent).
tokenizers = ["mistral-common", "sentencepiece", "tokenizers"]

[project.scripts]
token-optimizer = "tokenoptim.pillars.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "hypothesis"]

[tool.hatch.build.targets.wheel]
packages = ["tokenoptim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:builtin type [Ss]wig.*has no __module__:DeprecationWarning",
]
markers = [
    "slow: integration tests that need the downloaded model (skipped in CI)",
]

[tool.ruff]
src = ["tokenoptim", "tests"]
line-length = 100
extend-exclude = ["../scripts/fixtures"]

[tool.ruff.lint]
extend-select = ["I"]
